# haskell-matrixmpp

./: .editorconfig  .gitignore  LICENSE  README.md  matrixmpp.cabal  stack.yaml
app/: Main.hs
dev-files/: neovim-neomake-hlint-maker.vim
src/: Operators.hs
